<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_top"
                android:title="@string/top"/>
        <item
                android:id="@+id/nav_calendar"
                android:title="@string/calendar"/>
        <item
                android:id="@+id/nav_evaluation"
                android:title="@string/evaluation"/>
        <item
                android:id="@+id/nav_mycondate"
                android:title="@string/mycondate"/>
        <item
                android:id="@+id/nav_regisration_inf_edit"
                android:title="@string/regisration_inf_edit"/>
    </group>

</menu>
