<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <!-- ヘッダー -->
    <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabTextColor="#fff">

        <android.support.design.widget.TabItem
                android:id="@+id/tab_top"
                android:text="@string/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <android.support.design.widget.TabItem
                android:id="@+id/tab_calendar"
                android:text="@string/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <android.support.design.widget.TabItem
                android:id="@+id/tab_evaluation"
                android:text="@string/evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

    </android.support.design.widget.TabLayout>

    <!-- メインコンテンツ -->
    <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <!-- フッター -->
    <Button
            android:id="@+id/registerNewCondate"
            android:text="献立を登録する !"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>