<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <!-- ヘッダー -->
    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.design.widget.TabItem
                    android:id="@+id/tab_top"
                    android:text="@string/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <android.support.design.widget.TabItem
                    android:id="@+id/tab_calendar"
                    android:text="@string/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <android.support.design.widget.TabItem
                    android:id="@+id/tab_evaluation"
                    android:text="@string/evaluation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- メインコンテンツ -->
    <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"/>


</LinearLayout>